# fdpo

./: .gitignore  LICENSE  README.md  fdpo.py  pyproject.toml
.zed/: settings.json
fdpo/: __init__.py  __main__.py  ask.py  bench.py  check.py  cost.py  ir.py  lang.py  lib.py  smt.py  util.py
fdpo/prompts/: cost.md  counterexample.md  equivalent.md  eval.md  identical.md  illformed.md  input_error.md  malformed_command.md  missing_input.md  next_command.md  opt.md  opt_agent.md  opt_oneshot.md  opt_overview.md  overview.md  run.md  signature_mismatch.md  smoke.md
test/: add.nl  nop.nl
test/basic/: add.nl  add.out  add.smt  arith.nl  arith.out  arith.rt  arith.smt  bits.nl  bits.out  bits.rt  bits.smt  ext.nl  ext.out  ext.rt  ext.smt  literal.nl  literal.out  literal.rt  literal.smt  max.nl  max.out  max.rt  max.smt  mux.nl  mux.out  mux.rt  mux.smt  nop.out  nop.smt  popcnt.nl  popcnt.rt  popcnt.smt  temp.nl  temp.out  temp.rt  temp.smt  turnt.toml  useout.nl  useout.out  useout.rt  (+1 more)
test/equiv/: addov.nl  addov.smt  commute.nl  commute.smt  nope.nl  nope.out  nope.smt  popcnt.nl  popcnt.smt  strred.nl  strred.smt  subident.nl  subident.smt  turnt.toml
test/err/: arity.err  arity.nl  func-in-width.err  func-in-width.nl  func-out-width.err  func-out-width.nl  input-extra.err  input-extra.nl  input-missing.err  input-missing.nl  input-too-big.err  input-too-big.nl  mismatch.err  mismatch.nl  multi-assign.err  multi-assign.nl  multi-declare.err  multi-declare.nl  no-assign.err  no-assign.nl  out-width-mismatch.err  out-width-mismatch.nl  param-arity.err  syntax.err  (+11 more)
