[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fdpo"
authors = [{ name = "Adrian Sampson", email = "asampson@cs.cornell.edu" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["lark"]

[project.urls]
Home = "https://github.com/sampsyo/fdpo"

[project.scripts]
fdpo = "fdpo.__main__:main"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 79
